src/index.css
/* ... */
.l-article-main {
  padding-block-start: var(--line-feed);
}

.l-article-footer {
  padding-block: calc(var(--line-feed) - 1px) var(--line-feed);
  border-block-start: 1px dashed currentColor;
  background-color: var(--red-2);
}

.l-page {
  padding-block: var(--line-feed);
}

/* Components  {{{1 */
/* .button  {{{2 */

.button {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  border: 2px solid transparent;
  border-radius: 4px;
  padding-block: calc(var(--line-feed) / 4 - 2px);
  padding-inline: 2ch;
  font-family: var(--font-display);
}

a.button {
  text-decoration: none;
}

.button.is-outlined {
  color: var(--gray-10);
  border-color: var(--gray-10);
  box-shadow: 2px 2px var(--gray-4);
}

.button.is-outlined:hover {
  color: var(--current-bg);
  background-color: var(--gray-10);
}

.button.is-filled {
  color: var(--current-bg);
  background-color: var(--gray-10);
}

.button.is-filled:hover {
  background-color: var(--gray-9);
}

/* .circle-button  {{{2 */

.circle-button {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  block-size: calc(var(--line-feed) * 2 - 1px);
  inline-size: calc(var(--line-feed) * 2 - 1px);
  border: 1px solid currentColor;
  border-radius: 50%;
  background-color: var(--red-1);
  box-shadow: 2px 2px var(--gray-4);
}

a.circle-button {
  color: inherit;
  text-decoration: none;
}

a.circle-button:hover {
  background-color: var(--gray-2);
}

/* .figure  {{{2 */
/* Common  {{{3 */

.figure-caption {
  color: var(--gray-7);
}

.figure:where(.is-table, .is-html) > .figure-body {
  overflow-x: auto;
}

.figure:where(.is-table, .is-html) > .figure-body::-webkit-scrollbar {
  inline-size: calc(var(--line-feed) / 2);
  block-size: calc(var(--line-feed) / 2);
  background-color: var(--gray-8);
}

.figure:where(.is-table, .is-html) > .figure-body::-webkit-scrollbar-thumb {
  background-color: var(--gray-10);
}

/* Link  {{{3 */

.figure-body > a {
  --border-color: var(--gray-5);
  --shadow-color: var(--gray-3);
  display: block;
  padding: calc(var(--line-feed) / 2 - 2px);
  text-decoration: none;
  color: inherit;
  border: 1px solid var(--border-color);
  border-radius: 4px;
  box-shadow: 2px 2px var(--shadow-color);
  font-family: var(--font-display);
  font-weight: bold;
}

.figure-body > a:hover {
  --border-color: var(--red-6);
  --shadow-color: var(--red-3);
}

.figure-body > a[data-domain]::after {
  content: attr(data-domain);
  display: block;
  padding-inline-start: calc(16px + 0.5ch);
  font-size: var(--text-small);
  font-weight: normal;
  word-break: break-all;
  color: var(--gray-7);
  background-image: var(--favicon);
  background-repeat: no-repeat;
  background-size: 16px 16px;
  background-position: left center;
}

/* Code  {{{3 */

.figure.is-code {
  position: relative;
}

.figure.is-code[data-language]::before {
  content: attr(data-language);
  position: absolute;
  inset-block-start: 0;
  inset-inline-end: calc(var(--line-feed) / 2);
  line-height: 1.0;
  padding-block: 2px;
  padding-inline: 0.5ch;
  border-end-start-radius: 4px;
  border-end-end-radius: 4px;
  background-color: var(--red-6);
  color: var(--red-1);
  font-family: var(--font-display);
  font-size: var(--text-x-small);
}

.figure-body > pre {
  padding: calc(var(--line-feed) / 2);
  margin-block-end: 0;
  color: var(--gray-1);
  background-color: var(--gray-10);
  overflow-x: auto;
  overflow-x: overlay;
}

.figure-body > pre::-webkit-scrollbar {
  inline-size: calc(var(--line-feed) / 2);
  block-size: calc(var(--line-feed) / 2);
}

.figure-body > pre::-webkit-scrollbar-thumb {
  background-clip: padding-box;
  background-color: var(--gray-8);
  border: 4px solid transparent;
}

.figure-body > pre > code {
  all: unset;
}

/* Blockquote  {{{3 */

.figure-body > blockquote {
  position: relative;
  margin-block-end: 0;
  padding-block: var(--line-feed);
  padding-inline: calc(var(--line-feed) / 2);
  background-color: var(--red-2);
  background-image: linear-gradient(var(--red-5), var(--red-5)),
                    linear-gradient(var(--red-5), var(--red-5)),
                    linear-gradient(var(--red-5), var(--red-5)),
                    linear-gradient(var(--red-5), var(--red-5));
  background-position: top left, top right, bottom left, bottom right;
  background-size: var(--line-feed) 1px,
                   calc(100% - var(--line-feed) * 2.5) 1px,
                   calc(100% - var(--line-feed) * 2.5) 1px,
                   var(--line-feed) 1px;
  background-repeat: no-repeat;
}

.figure-body > blockquote::before,
.figure-body > blockquote::after {
  position: absolute;
  inline-size: calc(var(--line-feed) * 1.5);
  color: var(--red-6);
  font-size: 2.5rem;
  font-weight: bold;
  text-align: center;
}

.figure-body > blockquote::before {
  content: '\201c';
  inset-block-start: 0;
  inset-inline-start: var(--line-feed);
  transform: translateY(-25%);
}

.figure-body > blockquote::after {
  content: '\201d';
  inset-block-end: 0;
  inset-inline-end: var(--line-feed);
  transform: translateY(75%);
}

.figure-body > blockquote > :last-child {
  margin-block-end: 0;
}

/* Table  {{{3 */

.figure-body > table {
  max-inline-size: 100%;
  margin-block-end: 0;
  margin-inline: auto;
  font-size: var(--text-small);
}

.figure-body > table > tr > :is(td, th),
.figure-body > table > :is(tbody, thead, tfoot) > tr > :is(td, th) {
  padding-block: calc(var(--line-feed) / 4);
  padding-inline: 1ch;
  border: 0 solid var(--gray-10);
}

.figure-body > table > thead > tr > :is(td, th) {
  padding-block-end: calc(var(--line-feed) / 4 - 2px);
  border-block-end-width: 2px;
}

.figure-body > table > tr > :is(td, th),
.figure-body > table > tbody > tr > :is(td, th) {
  padding-block-end: calc(var(--line-feed) / 4 - 1px);
  border-block-end-width: 1px;
}

.figure-body > table > tfoot > tr > :is(td, th) {
  padding-block-start: calc(var(--line-feed) / 4 - 2px);
  border-block-start-width: 2px;
}
/* ... */

